js/src/tests/test262/built-ins/Error/prototype/stack/setter-this-not-object.js















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

assert.sameValue(typeof set, 'function');

var badReceivers = [
  ['undefined', undefined],
  ['null', null],
  ['true', true],
  ['false', false],
  ['number', 1],
  ['string', 's'],
  typeof Symbol === 'undefined' ? null : ['symbol', Symbol('s')],
  typeof BigInt === 'undefined' ? null : ['bigint', BigInt(0)]
];

for (var i = 0; i < badReceivers.length; ++i) {
  if (!badReceivers[i]) continue;
  var label = badReceivers[i][0];
  var value = badReceivers[i][1];
  assert.throws(TypeError, function () {
    set.call(value, '');
  }, label);
}




assert.throws(TypeError, function () {
  set.call(undefined, 0);
}, 'undefined this with non-String v');

assert.throws(TypeError, function () {
  set.call(null, {});
}, 'null this with non-String v');

reportCompare(0, 0);
